--- a/RemoteGui/RemoteGui/en.lproj/MainMenu.xib
+++ b/RemoteGui/RemoteGui/en.lproj/MainMenu.xib
@@ -1315,7 +1315,6 @@
 							<int key="NSvFlags">266</int>
 							<string key="NSFrame">{{20, 302}, {470, 22}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="199376225"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="348000396">
@@ -1355,7 +1354,6 @@
 							<int key="NSvFlags">265</int>
 							<string key="NSFrame">{{508, 300}, {62, 25}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="994000536"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="29780335">
@@ -1377,7 +1375,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{17, 332}, {104, 17}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="502859273"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="303603373">
@@ -1408,7 +1405,6 @@
 							<int key="NSvFlags">10</int>
 							<string key="NSFrame">{{20, 268}, {550, 5}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="683071926"/>
 							<string key="NSOffsets">{0, 0}</string>
 							<object class="NSTextFieldCell" key="NSTitleCell">
@@ -1432,7 +1428,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{20, 230}, {130, 25}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="319121128"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="202089248">
@@ -1454,7 +1449,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{164, 230}, {130, 25}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="540664614"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="723293126">
@@ -1476,7 +1470,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{302, 230}, {130, 25}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="282896449"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="781920488">
@@ -1498,7 +1491,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{440, 230}, {130, 25}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="58478230"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="994739925">
@@ -1520,7 +1512,6 @@
 							<int key="NSvFlags">10</int>
 							<string key="NSFrame">{{13, 26}, {564, 196}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="548104172"/>
 							<array class="NSMutableArray" key="NSTabViewItems">
 								<object class="NSTabViewItem" id="241496851">
@@ -1630,7 +1621,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{16, 22}, {54, 25}}</string>
 												<reference key="NSSuperview" ref="587430667"/>
-												<reference key="NSNextKeyView"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="278911908">
 													<int key="NSCellFlags">-2080244224</int>
@@ -1783,7 +1773,6 @@
 												<int key="NSvFlags">266</int>
 												<string key="NSFrame">{{125, 64}, {402, 15}}</string>
 												<reference key="NSSuperview" ref="751167863"/>
-												<reference key="NSNextKeyView"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSSliderCell" key="NSCell" id="750823873">
 													<int key="NSCellFlags">-2079981824</int>
@@ -2070,7 +2059,6 @@
 												<int key="NSvFlags">266</int>
 												<string key="NSFrame">{{118, 7}, {409, 48}}</string>
 												<reference key="NSSuperview" ref="17567102"/>
-												<reference key="NSNextKeyView"/>
 												<string key="NSClassName">Plot</string>
 											</object>
 										</array>
@@ -2091,7 +2079,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{21, 115}, {64, 18}}</string>
 												<reference key="NSSuperview" ref="548104172"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="570610587"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="18304588">
@@ -2115,7 +2102,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{103, 86}, {413, 15}}</string>
 												<reference key="NSSuperview" ref="548104172"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="254194727"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSSliderCell" key="NSCell" id="221685143">
@@ -2138,7 +2124,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{103, 66}, {413, 15}}</string>
 												<reference key="NSSuperview" ref="548104172"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSSliderCell" key="NSCell" id="236900299">
@@ -2161,7 +2146,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{34, 86}, {47, 17}}</string>
 												<reference key="NSSuperview" ref="548104172"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="406530584"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="1032326270">
@@ -2179,7 +2163,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{34, 66}, {41, 17}}</string>
 												<reference key="NSSuperview" ref="548104172"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="790708925"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="668119455">
@@ -2195,7 +2178,6 @@
 										</array>
 										<string key="NSFrame">{{10, 33}, {544, 150}}</string>
 										<reference key="NSSuperview" ref="58478230"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="361170680"/>
 									</object>
 									<string key="NSLabel">Swirl</string>
@@ -2215,7 +2197,6 @@
 					</array>
 					<string key="NSFrameSize">{597, 385}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="29677747"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1418}}</string>
@@ -3040,6 +3021,22 @@
 						<reference key="destination" ref="575347554"/>
 					</object>
 					<int key="connectionID">688</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">swirl_radius</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="406530584"/>
+					</object>
+					<int key="connectionID">689</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">swirl_angle</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="790708925"/>
+					</object>
+					<int key="connectionID">690</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -5066,177 +5063,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">688</int>
+			<int key="maxID">690</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onBounceAmplitude:">id</string>
-						<string key="onReloadBadWords:">id</string>
-						<string key="onReloadCommands:">id</string>
-						<string key="onSendFakeTweet:">id</string>
-						<string key="onShakeAmplitude:">id</string>
-						<string key="onShakeButton:">id</string>
-						<string key="onShakeNumber:">id</string>
-						<string key="onShakeUpdate:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onBounceAmplitude:">
-							<string key="name">onBounceAmplitude:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onReloadBadWords:">
-							<string key="name">onReloadBadWords:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onReloadCommands:">
-							<string key="name">onReloadCommands:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onSendFakeTweet:">
-							<string key="name">onSendFakeTweet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onShakeAmplitude:">
-							<string key="name">onShakeAmplitude:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onShakeButton:">
-							<string key="name">onShakeButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onShakeNumber:">
-							<string key="name">onShakeNumber:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onShakeUpdate:">
-							<string key="name">onShakeUpdate:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bounce_button">NSButton</string>
-						<string key="bounce_duration">NSSlider</string>
-						<string key="fake_tweet">NSTextField</string>
-						<string key="plot">Plot</string>
-						<string key="reload_badwords_button">NSButton</string>
-						<string key="reload_commands_button">NSButton</string>
-						<string key="send_tweet_button">NSButton</string>
-						<string key="shake_amplitude">NSSlider</string>
-						<string key="shake_button">NSButton</string>
-						<string key="shake_duration">NSSlider</string>
-						<string key="shake_number">NSSlider</string>
-						<string key="window">NSWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bounce_button">
-							<string key="name">bounce_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bounce_duration">
-							<string key="name">bounce_duration</string>
-							<string key="candidateClassName">NSSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="fake_tweet">
-							<string key="name">fake_tweet</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="plot">
-							<string key="name">plot</string>
-							<string key="candidateClassName">Plot</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="reload_badwords_button">
-							<string key="name">reload_badwords_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="reload_commands_button">
-							<string key="name">reload_commands_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="send_tweet_button">
-							<string key="name">send_tweet_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shake_amplitude">
-							<string key="name">shake_amplitude</string>
-							<string key="candidateClassName">NSSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shake_button">
-							<string key="name">shake_button</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shake_duration">
-							<string key="name">shake_duration</string>
-							<string key="candidateClassName">NSSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shake_number">
-							<string key="name">shake_number</string>
-							<string key="candidateClassName">NSSlider</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
-							<string key="name">window</string>
-							<string key="candidateClassName">NSWindow</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AppDelegate.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSDocument</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="printDocument:">id</string>
-						<string key="revertDocumentToSaved:">id</string>
-						<string key="runPageLayout:">id</string>
-						<string key="saveDocument:">id</string>
-						<string key="saveDocumentAs:">id</string>
-						<string key="saveDocumentTo:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="printDocument:">
-							<string key="name">printDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="revertDocumentToSaved:">
-							<string key="name">revertDocumentToSaved:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="runPageLayout:">
-							<string key="name">runPageLayout:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocument:">
-							<string key="name">saveDocument:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocumentAs:">
-							<string key="name">saveDocumentAs:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveDocumentTo:">
-							<string key="name">saveDocumentTo:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSDocument.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">Plot</string>
-					<string key="superclassName">NSView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/Plot.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
